task1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    app.kubernetes.io/name: payments
    app.kubernetes.io/part-of: ledger-api
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
