task1/k8s/base/deployment-reporting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app.kubernetes.io/name: reporting
    app.kubernetes.io/component: neighbour
    app.kubernetes.io/part-of: ledger-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: reporting
      app.kubernetes.io/component: neighbour
  template:
    metadata:
      labels:
        app.kubernetes.io/name: reporting
        app.kubernetes.io/component: neighbour
        app.kubernetes.io/part-of: ledger-api
    spec:
      serviceAccountName: reporting
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: reporting
          image: python:3.12.4-alpine3.20
          imagePullPolicy: IfNotPresent
          command:
            - python
            - -m
            - http.server
            - "8080"
            - --directory
            - /srv/reporting
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 10
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          volumeMounts:
            - name: reporting-content
              mountPath: /srv/reporting
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: reporting-content
          configMap:
            name: reporting-config
        - name: tmp
          emptyDir:
            sizeLimit: 32Mi
