task1/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app.kubernetes.io/name: ledger-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: ledger-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ledger-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: reporting
  namespace: payments
  labels:
    app.kubernetes.io/name: reporting
    app.kubernetes.io/component: neighbour
    app.kubernetes.io/part-of: ledger-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reporting
    app.kubernetes.io/component: neighbour
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
