task1/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledger-api
  namespace: payments
  labels:
    app.kubernetes.io/name: ledger-api
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ledger-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: ledger-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ledger-api
                port:
                  name: http
